refactor: changed heading

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Priyanshu Portfolio</title>
 </head>
 <body>
-    Hi ! I am Priyanshu . Glad that you are here and made it !!
+   <h1>Hi ! I am Priyanshu . Glad that you are here and made it !!</h1> 
     
 </body>
 </html>
