--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
    <h1>Hi ! I am Priyanshu . Glad that you are here and made it !!</h1> 
+   <p>Hi there I am learning new stuff day by day , I know I am going to make big one day</p>
     
 </body>
 </html>
