--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
    <h1>Hi ! I am Priyanshu . Glad that you are here and made it !!</h1> 
    <p>Hi there I am learning new stuff day by day , I know I am going to make big one day</p>
+   <p>I have worked on few CLI apps , I will showcase all of that and more here tommorow </p>
     
 </body>
 </html>
