update:- adding some hobbies
telling a little more about myself

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
    <h1>Hi ! I am Priyanshu . Glad that you are here and made it !!</h1> 
    <p>Hi there I am learning new stuff day by day , I know I am going to make big one day</p>
    <p>I have worked on few CLI apps , I will showcase all of that and more here tommorow </p>
+
+
+   <p>I like to learn and now a days I am learning about stock market as a side hobby</p>
     
 </body>
 </html>
